target/classes/META-INF/fabric8/openshift/fruits-deploymentconfig.yml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=fruits&var-version=15-SNAPSHOT
  labels:
    app: fruits
    provider: fabric8
    version: 15-SNAPSHOT
    group: com.example
  name: fruits
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: fruits
    provider: fabric8
    group: com.example
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=fruits&var-version=15-SNAPSHOT
      labels:
        app: fruits
        provider: fabric8
        version: 15-SNAPSHOT
        group: com.example
    spec:
      containers:
      - env:
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: user
              name: my-database-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: my-database-secret
        - name: JAVA_OPTIONS
          value: -Dspring.profiles.active=openshift
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: fruits:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: fruits:latest
    type: ImageChange
