target/classes/META-INF/fabric8/openshift/fruits-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: fruits
    provider: fabric8
    version: 15-SNAPSHOT
    group: com.example
  name: fruits
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fruits
